syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractDescriptorOneOfType";

import "sdc/biceps/abstractdescriptor.proto";
import "sdc/biceps/abstractalertdescriptoroneof.proto";
import "sdc/biceps/abstractdevicecomponentdescriptoroneof.proto";
import "sdc/biceps/abstractoperationdescriptoroneof.proto";
import "sdc/biceps/abstractmetricdescriptoroneof.proto";
import "sdc/biceps/abstractcontextdescriptoroneof.proto";

message AbstractDescriptorOneOf {
  oneof abstract_descriptor_one_of {
    AbstractDescriptor abstract_descriptor = 1;
    AbstractAlertDescriptorOneOf abstract_alert_descriptor_one_of = 2;
    AbstractDeviceComponentDescriptorOneOf abstract_device_component_descriptor_one_of = 3;
    AbstractOperationDescriptorOneOf abstract_operation_descriptor_one_of = 4;
    AbstractMetricDescriptorOneOf abstract_metric_descriptor_one_of = 5;
    AbstractContextDescriptorOneOf abstract_context_descriptor_one_of = 6;
  }
}
